# post-training-lab

./: .gitignore  README.md
01-sft/: README.md  generate.py  pyproject.toml  train.py
01-sft/configs/: default.yaml  smoke.yaml
02-reward-modeling/: README.md  pyproject.toml  score.py  train.py  train_prm.py
02-reward-modeling/configs/: default.yaml  prm.yaml  smoke.yaml
03-ppo/: README.md  generate.py  pyproject.toml  train.py
03-ppo/configs/: default.yaml  smoke.yaml
04-dpo/: README.md  generate.py  pyproject.toml  train.py
04-dpo/configs/: default.yaml  smoke.yaml
05-grpo/: README.md  generate.py  pyproject.toml  rewards.py  train.py
05-grpo/configs/: default.yaml  smoke.yaml
06-online-infra/: README.md  eval.py  pyproject.toml  train.py
06-online-infra/configs/: default.yaml  smoke.yaml
07-distillation/: .gitignore  README.md  generate.py  pyproject.toml  train.py
07-distillation/configs/: default.yaml  smoke.yaml
08-agentic-rl/: README.md  agentic_rl_skeleton.py
