[project]
name = "post-training-lab-dpo"
version = "0.1.0"
description = "Direct Preference Optimization (DPO) + variants (IPO/KTO/ORPO/CPO/SimPO) — PPO's RLHF objective solved in closed form. The modern default for preference alignment."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Practitioner stack, June 2026. Same pins as the rest of the lab.
    "transformers>=5.0,<6",
    "trl>=1.7,<2",
    "datasets>=3.2",
    "accelerate>=1.4",
    "peft>=0.14",
    "torch>=2.5",
    # Experiment tracking — wandb is the course-wide default tracker.
    "wandb>=0.18",
]

[project.optional-dependencies]
# Fused FlashAttention-2 kernels — optional speedup for the headline run. DPO does a forward pass
# over chosen+rejected for BOTH the policy and the reference, so attention throughput matters more
# here than in RM. Install with: uv sync --extra flash
flash = ["flash-attn>=2.7"]
# 4-bit quantization for the LoRA/QLoRA path (ref-free via adapter-disabling — see README).
quant = ["bitsandbytes>=0.45"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
